Fix Webkit about page overlaps

--- a/components/AboutModal/AboutModal.scss
+++ b/components/AboutModal/AboutModal.scss
@@ -1,8 +1,6 @@
 @import '../../styles/global.scss';
 
 .aboutModal {
-  display: flex;
-
   h1 {
     margin-top: 0;
     margin-bottom: $baseline-1;
@@ -47,7 +45,7 @@
   z-index: 1;
   order: 2;
   width: 100%;
-  max-width: 80ch;
+  max-width: 80 * $baseline;
   margin-top: $baseline-2;
 
   :global(.gallery-version) & {
@@ -111,7 +109,7 @@
   display: flex;
   flex-direction: column;
   order: 3;
-  max-width: 80ch;
+  max-width: 80 * $baseline;
   padding-top: $baseline * 3;
 
   :global(.gallery-version) & {
@@ -149,7 +147,7 @@
 .extraContent {
   order: 4;
   width: 100%;
-  max-width: 80ch;
+  max-width: 80 * $baseline;
   margin-top: $baseline-1;
 
   :global(.gallery-version) & {
